--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     </ol>
     <hr/><h2>Roles & Responsibilities:</h2>
     <ul>
+        <li>Development and Maintenance of web based application software.</li>
         <li>e-Office, e-Tender, GeM, PFMS & Modification in  Department Website.</li>
-        <li>Overall Networking & Hardware//Software related issues and their troubleshooting</li>
+        <li>Software/Hardware & Networking  related issues and their troubleshooting</li>
         <li>Server management and Backup.</li>
         <li>Technical support to the Department Officers/Officials. </li>
-        <li>Dealing with NIC, FSSAI for Application Development\Modification</li>
         <li>Imparting training to the manpower (Technical and Non-Technical).</li>
         <li>Updation and incorporation of new directions/decisions of the state authority in the web based FoSCoS (Food Safety Compliance System) and any other related problems</li>
     </ul>
@@ -52,9 +52,9 @@
     </ol>
     <hr/><h2>Technical Skills:</h2>
     <ul>
-        <li>Skills	    :       .Net Framework, node Framework</li>
+        <li>Skills	    :       .Net Framework, .Net Core</li>
         <li>Database	:        Microsoft Sql Server, My SQL</li>
-        <li>Language 	:        C#,ReactJs,javscripta </li>
+        <li>Language 	:        C#,HTML,CSS,Javascript,BootStrap </li>
     </ul>
     <hr/><h2>Achievements/Awards/Extra Curricular:</h2>
     <ul>
